nivasa-macros/tests/trybuild/subscribe_message_invalid_target.rs
use nivasa_macros::subscribe_message;

#[subscribe_message("chat.join")]
fn not_a_method() {}

fn main() {}
